--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,8 @@
+.app {
+  max-width: 1080px;
+  margin: 0 auto;
+}
+
 .logo {
   width: 100px;
   height: 80px;
@@ -5,5 +10,5 @@
 }
 
 .title {
-  font-size: 24px;
+  font-size: 32px;
 }
