--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,8 +4,12 @@ body {
   margin: 10px;
 }
 
-div {
+div, p, label, span, td, th {
   color: $baseColor;
+  font-size: 12px;
+}
+
+div {
   font-size: 12px;
 }
 
@@ -155,15 +159,6 @@ section, section input {
   margin-bottom: 10px;
 }
 
-#printme {
-  display: none;
-}
-@media print {
-  #printme {
-    display: block;
-  }
-}
-
 .table-full-width {
   width: 100%;
 }
@@ -215,4 +210,13 @@ section, section input {
 
 footer {
   margin: 20px 0;
+}
+
+#printme {
+  display: none;
+}
+@media print {
+  #printme {
+    display: block;
+  }
 }
