fix print issue

--- a/src/styles/checkbox.scss
+++ b/src/styles/checkbox.scss
@@ -34,6 +34,7 @@ input[type="checkbox"], input[type="radio"]{
   height: 12px;
   width: 12px;
   border: 1px solid $baseColor;
+  background-color: #ffffff;
 }
 
 /* Create the checkmark/indicator (hidden when not checked) */
