--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,6 +2,7 @@
 
 body {
   margin: 10px;
+  -webkit-print-color-adjust: exact;
 }
 
 div, p, label, span, td, th {
@@ -74,7 +75,7 @@ section, section input {
 }
 
 .logo {
-  width: 200px;
+  width: 175px;
   position: relative;
   span {
     position: absolute;
@@ -85,7 +86,6 @@ section, section input {
 
 .title {
   font-size: 32px;
-  margin-top: 20px;
 }
 .subtitle-1 {
   font-size: 16px;
@@ -120,7 +120,7 @@ section, section input {
   font-weight: bold;
 }
 
-.btn-print {
+#btn-print {
   position: absolute;
   right: 10px;
   padding: 10px 20px;
@@ -212,11 +212,8 @@ footer {
   margin: 20px 0;
 }
 
-#printme {
-  display: none;
-}
 @media print {
-  #printme {
-    display: block;
+  #btn-print {
+    display: none;
   }
 }
